tests/neg/parent-refinement.check
-- Error: tests/neg/parent-refinement.scala:10:6 -----------------------------------------------------------------------
10 |class Bar extends IdOf[Int], (X { type Value = String }) // error
   |      ^^^
   |class Bar cannot be instantiated since it has a member Value with possibly conflicting bounds Int | String <: ... <: Int & String
-- [E007] Type Mismatch Error: tests/neg/parent-refinement.scala:14:17 -------------------------------------------------
14 |  val x: Value = 0 // error
   |                 ^
   |                 Found:    (0 : Int)
   |                 Required: Baz.this.Value
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/parent-refinement.scala:20:6 --------------------------------------------------
20 |  foo(2) // error
   |      ^
   |      Found:    (2 : Int)
   |      Required: Boolean
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/parent-refinement.scala:16:22 -------------------------------------------------
16 |val x: IdOf[Int] = Baz() // error
   |                   ^^^^^
   |                   Found:    Baz
   |                   Required: IdOf[Int]
   |
   | longer explanation available when compiling with `-explain`
